Fix MouseLeave for BP-based guests.

The MouseEnter/Leave logic in RenderWidgetHostInputEventRouter expects
child frames to return a non-null GetParentView(), but children that are
RenderWidgetHostViewGuests currently return null, causing the logic to
fail.

This CL fixes that.

Bug: 835566
Change-Id: I0792772872e10134f4c79b8f929bc4271543f00e
Reviewed-on: https://chromium-review.googlesource.com/1050613
Reviewed-by: Ken Buchanan <kenrb@chromium.org>
Reviewed-by: Charlie Reis <creis@chromium.org>
Reviewed-by: dsinclair <dsinclair@chromium.org>
Commit-Queue: James MacLean <wjmaclean@chromium.org>
Cr-Commit-Position: refs/heads/master@{#557538}
Former-commit-id: 4263cfccd50ca0fe62d61caa5a67fb71c6e3a61e