content/browser/renderer_host/render_widget_host_view_child_frame.h
@@ -221,7 +221,7 @@ class CONTENT_EXPORT RenderWidgetHostViewChildFrame
   // Returns the view into which this view is directly embedded. This can
   // return nullptr when this view's associated child frame is not connected
   // to the frame tree.
-  RenderWidgetHostViewBase* GetParentView();
+  virtual RenderWidgetHostViewBase* GetParentView();
 
   void RegisterFrameSinkId();
   void UnregisterFrameSinkId();
